[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "seveno-pyutil"
version = "0.8.5"
description = "Various unsorted Python utilities"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["utilities"]
license = { text = "MIT" }
authors = [{ name = "Tomislav Adamic", email = "tomislav.adamic@gmail.com" }]

dependencies = [
	"colorlog",
	"holidays",
	"marshmallow>=3",
	"pretty-traceback",
	"pygments",
	"python-dateutil>=2.6.0",
	"sqlparse",
	"tzlocal",
]


[project.urls]
Source = "https://github.com/tadams42/seveno_pyutil"
Documentation = "https://seveno-pyutil.readthedocs.io/en/latest/"


[project.optional-dependencies]
dev = ["black", "bump2version", "ipython", "isort", "rich", "pre-commit"]
docs = ["furo", "myst-parser", "sphinx", "sphinx-copybutton"]
tests = [
	"check-manifest",
	"pytest",
	"coverage",
	"factory-boy",
	"faker",
	"pytest-spec",
]


[tool.setuptools]
zip-safe = false
platforms = ["any"]
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]


[tool.isort]
profile = "black"
skip_gitignore = true


[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = [".git", "tmp*", ".hg", ".venv", ".tox", ".eggs"]
# Enabling doctest modules on src/ rises all kinds of import errors
# on "pip install -e ." repo and in tox
# Part of the problem is here:
# https://github.com/pytest-dev/pytest/issues/2042
# Untill there is a better way to run doctests over installed package code
# we disable them
addopts = [
	"-rxEfsw",
	"--strict-markers",
	"--tb=short",
	"--doctest-modules",
	"--doctest-glob=*.rst",
	"--doctest-glob=*.py",
	"--ignore=bin",
	"--ignore=build",
	"--ignore=docs/conf.py",
	"--ignore=src",
]
python_classes = ["Describe*", "When_*", "describe_*"]
python_functions = ["it_*", "test_*", "then_*", "when_*"]
python_files = ["test_*", "*_spec.py", "*_test.py"]
spec_header_format = "{test_case}"


[tool.coverage.paths]
source = ["src"]


[tool.coverage.run]
source = ["src", "tests"]


[tool.coverage.report]
show_missing = true
precision = 2
