[build-system]
requires = ["setuptools >= 77", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "seveno-pyutil"
version = "0.9.3"
description = "Various unsorted Python utilities"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3 :: Only",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["utilities"]
license =  "MIT"
authors = [{ name = "Tomislav Adamic", email = "tomislav.adamic@gmail.com" }]

dependencies = [
	"colorlog",
	"holidays",
	"pretty-traceback",
	"pygments",
	"python-dateutil >= 2.6.0",
	"sqlglot[c] >= 29.0.1",
	"tzlocal",
]

[project.urls]
Source = "https://github.com/tadams42/seveno_pyutil"
Documentation = "https://seveno-pyutil.readthedocs.io/en/latest/"

[dependency-groups]
dev = [
	"coverage",
	"factory-boy",
	"faker",
	"ipython",
	"pre-commit",
	"pytest-spec",
	"pytest",
	"rich",
	"ruff",

]
docs = ["furo", "myst-parser", "sphinx", "sphinx-copybutton"]


[tool.setuptools]
zip-safe = false
platforms = ["any"]
include-package-data = true
[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]


[tool.ruff]
exclude = [".git", ".venv", "build", "dist"]
line-length = 88                             # Same as Black.
indent-width = 4                             # Same as Black.
target-version = "py313"
cache-dir = "~/.cache/ruff"
src = [".", "src"]


[tool.ruff.format]
quote-style = "double" # Like Black, use double quotes for strings.
indent-style = "space" # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false # Like Black, respect magic trailing commas.
line-ending = "auto" # Like Black, automatically detect the appropriate line ending.
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"


[tool.ruff.lint]
ignore = [
	"E501",   # line-too-long (E501)
	"TRY003", # Avoid specifying long messages outside the exception class
	"RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
]
select = [
	"E",
	"F",
	"I",   # isort (I)
	"C90", # mccabe (C90)
	"UP",  # pyupgrade (UP)
	"S",   # flake8-bandit (S)
	"FBT", # flake8-boolean-trap (FBT)
	"B",   # flake8-bugbear (B)
	"C4",  # flake8-comprehensions (C4)
	"DTZ", # flake8-datetimez (DTZ)
	"FA",  # flake8-future-annotations (FA)
	"G",   # flake8-logging-format (G)
	"PIE", # flake8-pie (PIE)
	"PT",  # flake8-pytest-style (PT)
	"RET", # flake8-return (RET)
	"SIM", # flake8-simplify (SIM)
	"TCH", # flake8-type-checking (TCH)
	"PTH", # flake8-use-pathlib (PTH)
	"PL",  # Pylint (PL)
	"TRY", # tryceratops (TRY)
	"RUF", # Ruff-specific rules (RUF)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # unused-import (F401)
"tests/**/__init__.py" = ["F403"] # undefined-local-with-import-star (F403)
"tests/conftest.py" = ["F401", "F403"] # undefined-local-with-import-star (F403)
"tests/*" = [
	"S101",    # Use of `assert` detected
	"S311",    # Standard pseudo-random generators are not suitable for cryptographic ...
	"S108",    # Probable insecure usage of temporary file
	"PLR0913", # Too many arguments to function call (6 > 5)
	"PLR2004", # Magic value used in comparison
	"S105",    # Possible hardcoded password
]


[tool.pytest]
minversion = "9.0"
testpaths = ["tests"]
addopts = [
	"-rxEfsw",
	"--strict-markers",
	"--tb=short",
	"--doctest-modules",
	"--doctest-glob=*.rst",
	"--doctest-glob=*.py",
	"--ignore=bin",
	"--ignore=build",
	"--ignore=docs/conf.py",
	"--ignore=src",
]
python_classes = ["Describe*", "When_*", "describe_*"]
python_functions = ["it_*", "test_*", "then_*", "when_*"]
python_files = ["test_*", "*_spec.py", "*_test.py"]
spec_header_format = "{test_case}"


[tool.coverage.paths]
source = ["src"]


[tool.coverage.run]
source = ["src", "tests"]


[tool.coverage.report]
show_missing = true
precision = 2


[tool.bumpversion]
current_version = "0.9.3"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.dev(?P<build>\\d+))?"
serialize = ["{major}.{minor}.{patch}.dev{build}", "{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "{new_version}"
tag_message = "build: bumped version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "build: bumped version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "src/seveno_pyutil/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "docs/conf.py"
search = "release = \"{current_version}\""
replace = "release = \"{new_version}\""
