[metadata]
name = seveno_pyutil
version = 0.5.8
description = Various unsorted Python utilities
long_description = file: README.md
long_description_content_type = text/markdown
author = Tomislav Adamic
author_email = tomislav.adamic@gmail.com
url = https://github.com/tadams42/seveno_pyutil
license = MIT
license_files = LICENSE
classifiers =
        Development Status :: 4 - Beta
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3 :: Only
        Operating System :: OS Independent
        Topic :: Software Development :: Libraries :: Python Modules
keywords = utilities
platforms = any

[options]
zip_safe = False
python_requires = >=3.9
install_requires =
    pytz
    tzlocal
    python-dateutil>=2.6.0
    colorlog
    marshmallow>=3
    pygments
    sqlparse
package_dir=
    =src
packages=find:

[options.packages.find]
exclude=tests
where=src

[options.extras_require]
dev =
    black
    bump2version
    check-manifest
    coverage
    factory-boy
    faker
    ipython
    isort
    pytest
    pytest-mock
    pytest-spec
    sphinx
    sphinx_rtd_theme
    m2r2
    twine
tests=
    pytest
    pytest-spec
    faker
    coverage
    check-manifest
docs =
    sphinx
    sphinx_rtd_theme
    m2r2

[aliases]
test = pytest
